# YandexLyceumCPP

./: .gitignore  CMakeLists.txt  README.md
CF/: 1 Матрица.cpp  2 Счастливое число.cpp  3 Напитки.cpp  4 Фафа и его компания.cpp  5 Патрик и поход в магазин.cpp  7 Тетрис.cpp
Stepik/Функции и рекурсия/: 1.cpp
YandexContest/: 1. Печать текста.cpp  3. Дюймы.cpp  4. Арифметическая прогрессия.cpp  5. Ход ферзя.cpp
YandexContest/DP/: 1. Оптимальный размен.cpp
Азбука C++/Hello, world/Classwork/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
Азбука C++/Hello, world/DeepThink/: 1.cpp  2.cpp
Азбука C++/Hello, world/Homework/: 1.cpp  2.cpp
Азбука C++/Массивы/Classwork/: 1. 18 финала.cpp  2. Первый-нулевой.cpp
Азбука C++/Типы данных/Classwork/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
Азбука C++/Типы данных/Homework/: 1.cpp  2.cpp
Азбука C++/Указатели/Classwork/: 1. Стильная одежда.cpp  2. Сумма номеров.cpp
Азбука C++/Условия/Classwork/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
Азбука C++/Циклы. Часть 1/Classwork/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
Азбука C++/Циклы. Часть 1/DeepThink/: 1.cpp  2.cpp
Азбука C++/Циклы. Часть 1/Homework/: 1.cpp  2.cpp  3.cpp
Азбука C++/Циклы. Часть 2/Classwork/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
Азбука C++/Циклы. Часть 2/Homework/: 1 Викторина.cpp  2.cpp
