cmake_minimum_required(VERSION 4.0)
project(SESC)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(SESC "Азбука C++/Hello, world/Classwork/1.cpp"
        "Азбука C++/Hello, world/Classwork/2.cpp"
        "Азбука C++/Hello, world/Classwork/3.cpp"
        "Азбука C++/Hello, world/Homework/1.cpp"
        "Азбука C++/Hello, world/Homework/2.cpp"
        "Азбука C++/Hello, world/DeepThink/1.cpp"
        "Азбука C++/Hello, world/DeepThink/2.cpp"
        "Азбука C++/Условия/Classwork/10.cpp"
        "Азбука C++/Условия/Classwork/9.cpp"
        "Азбука C++/Hello, world/Classwork/4.cpp"
        "Азбука C++/Hello, world/Classwork/5.cpp"
        "Азбука C++/Hello, world/Classwork/6.cpp"
        "Азбука C++/Условия/Classwork/8.cpp"
        "Азбука C++/Условия/Classwork/6.cpp"
        "Азбука C++/Условия/Classwork/5.cpp"
        "Азбука C++/Типы данных/Classwork/1.cpp"
        "Азбука C++/Типы данных/Classwork/2.cpp"
        "Азбука C++/Типы данных/Classwork/3.cpp"
        "Азбука C++/Типы данных/Classwork/4.cpp"
        "Азбука C++/Типы данных/Classwork/5.cpp"
        "Азбука C++/Типы данных/Classwork/6.cpp"
        "Азбука C++/Типы данных/Homework/1.cpp"
        "Азбука C++/Типы данных/Homework/2.cpp"
        "Азбука C++/Циклы. Часть 1/Classwork/1.cpp"
        "Азбука C++/Циклы. Часть 1/Classwork/2.cpp"
        "Азбука C++/Условия/Classwork/7.cpp"
        "Азбука C++/Условия/Classwork/4.cpp"
        "Азбука C++/Условия/Classwork/3.cpp"
        "Азбука C++/Условия/Classwork/2.cpp"
        "Азбука C++/Условия/Classwork/1.cpp"
        "YandexContest/1. Печать текста.cpp"
        "YandexContest/2. Сумма чисел.cpp"
        "YandexContest/3. Дюймы.cpp"
        "YandexContest/4. Арифметическая прогрессия.cpp"
        "YandexContest/5. Ход ферзя.cpp"
        "Азбука C++/Циклы. Часть 1/Classwork/3.cpp"
        "Азбука C++/Циклы. Часть 1/Classwork/4.cpp"
        "Азбука C++/Циклы. Часть 1/Classwork/5.cpp"
        "Азбука C++/Циклы. Часть 1/DeepThink/1.cpp"
        "Азбука C++/Циклы. Часть 1/DeepThink/2.cpp"
        "Азбука C++/Циклы. Часть 1/Homework/1.cpp"
        "Азбука C++/Циклы. Часть 1/Homework/2.cpp"
        "Азбука C++/Циклы. Часть 1/Homework/3.cpp"
        "Азбука C++/Циклы. Часть 2/Homework/1 Викторина.cpp"
        "Азбука C++/Циклы. Часть 2/Homework/2.cpp"
        "Азбука C++/Массивы/Classwork/1. 18 финала.cpp")
